styles/contact.module.css
.layout {
  display: flex;
  margin-top: 1rem;
  margin-bottom: 1rem;
  flex-direction: column;
  gap: 1rem;
}
.label {
  display: block;
  font-size: 0.875rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--gray-950);
  text-transform: capitalize;
  background-color: transparent;
}
.submit {
  padding: 0.625rem 1.25rem;
  border-radius: 0.5rem;
  text-decoration: none;
  font-size: 0.875rem; /* 14px */
  line-height: 1.25rem;
  border: transparent;
  font-weight: 600;
  color: var(--primary-50);
  background-color: var(--primary-700);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}
.submit:hover {
  cursor: pointer;
  opacity: 0.8;
}
.inputWarning {
  font-size: 0.75rem;
line-height: 1rem; 
color: #B91C1C; 
text-transform: capitalize; 
}
.input {
  width: 100%;
  display: block;
  box-shadow: transparent;
  margin: 0.5rem 0rem 0rem 0rem;
  padding: 0.5rem 0.875rem;
  border-radius: 0.375rem;
  border: 1px solid var(--gray-200);
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: var(--gray-950);
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
}

